# population_service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: __init__.py  config.py  get_data.py  parser.py  print_data.py  repo.py
src/core/: config.py
src/db/: __init__.py  db_helper.py
src/db/models/: base.py  countries.py
src/services/: __init__.py  data_loaded_service.py  print_service.py
