[project]
name = "population-service"
version = "0.1.0"
description = ""
authors = [
    {name = "_Avvake_",email = "denisergo18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "black (>=26.1.0,<27.0.0)"
]


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
